force-app/main/default/objects/SendGridRequestLog__c/SendGridRequestLog__c.object-meta.xml
<CustomObject>
    <label>SendGrid Request Log</label>
    <nameField>
        <displayFormat>EmailLog-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SendGrid Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>