force-app/main/default/objects/SendGridRequestLog__c/fields/DailyApiLimit__c.field-meta.xml
<CustomField>
    <fullName>DailyApiLimit__c</fullName>
    <label>Daily API Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>