force-app/main/default/objects/SendGridRequestLog__c/fields/DailyApiUsage__c.field-meta.xml
<CustomField>
    <fullName>DailyApiUsage__c</fullName>
    <label>Daily API Usage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>