force-app/main/default/objects/SendGridRequestLog__c/fields/IsResponseUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsResponseUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Updated?</label>
    <type>Checkbox</type>
</CustomField>