force-app/main/default/objects/SendGridRequestLog__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>TemplateId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>