force-app/main/default/objects/SendGridRequestLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TemplateId__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>ResponseStatusCode__c</columns>
    <columns>HasAttachment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>